Fixed Image Align Issue on map.html

--- a/style.css
+++ b/style.css
@@ -160,3 +160,7 @@ footer {
     text-align: center;
     padding: 10px;
 }
+
+img {
+    align-self: center;
+}
